# emiryasar_mcp_code_analyzer

./: README.md  pyproject.toml
mcp_code_analyzer/: __init__.py  __main__.py  server.py
mcp_code_analyzer/server/: handlers.py
mcp_code_analyzer/tools/: __init__.py  manager.py  modification_tools.py
