[project]
name = "mcp-code-analyzer"  # mcp-server prefix'ini kaldırdım
version = "0.1.0"
description = "A code analysis tool using Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "astroid>=2.14.2",
    "radon>=5.1.0",
    "networkx>=3.0",
    "chardet>=4.0.0"
]

[project.scripts]
mcp-code-analyzer = "mcp_code_analyzer:main"  # komut adını da değiştirdim

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_code_analyzer"]